# omnibase_compat

./: .pre-commit-config.yaml  .yamlfmt  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: auto-merge.yml  auto-tag.yml  ci.yml  contract-validation.yml  linear-close-on-merge.yml  omni-standards-compliance.yml  onex-schema-compat.yml  release-dry-run.yml  release.yml  shim-ttl-gate.yml  stale-todo-gate.yml
contracts/: OMN-11024.yaml  OMN-8038.yaml  OMN-9344.yaml
docs/: README.md
docs/evidence/: 2026-04-24-omn-9597-doc-pass-note.md
docs/plans/: omn-9459-release-workflow.md
docs/runbooks/: release.md
scripts/: check_compat_retention.py  validate_no_upstream_deps.py  validate_spdx_headers.sh
scripts/ci/: detect_test_paths.py  test_selection_adjacency.yaml  test_selection_models.py
src/omnibase_compat/: __init__.py
src/omnibase_compat/adapters/: __init__.py  adapter_project_tracker_linear.py
src/omnibase_compat/concurrency/: __init__.py  util_run_coro_sync.py
src/omnibase_compat/contracts/: __init__.py
src/omnibase_compat/enums/: __init__.py  enum_execution_status.py  enum_message_category.py  enum_node_kind.py
src/omnibase_compat/env/: __init__.py  util_is_strict_mode.py
src/omnibase_compat/experimental/: __init__.py  _registry.py
src/omnibase_compat/metadata/: __init__.py  artifact_status.py  transitional.py
src/omnibase_compat/models/: __init__.py  event_envelope.py  model_project_tracker.py
src/omnibase_compat/overseer/: __init__.py  enum_artifact_store_action.py  enum_llm_provider_action.py  enum_notification_action.py  model_agent_scope_presets.py  model_completion_report.py  model_context_bundle.py  model_escalation_request.py  model_overnight_contract.py  model_process_runner_state_transition.py  model_routing_decision.py  model_session_contract.py  model_task_delta_envelope.py  model_task_shape_features.py  model_task_state_envelope.py  model_verifier_output.py  model_worker_contract.py
src/omnibase_compat/primitives/: __init__.py
src/omnibase_compat/protocols/: __init__.py  protocol_data_source.py  protocol_docker_client.py  protocol_github_client.py  protocol_health_check.py  protocol_idempotency_store.py  protocol_linear_client.py  protocol_project_tracker.py  protocol_projection_database.py  protocol_projection_database_sync.py
src/omnibase_compat/registration/: __init__.py  decorator_idempotent_register.py  decorator_injectable_optional.py
src/omnibase_compat/routing/: __init__.py  model_routing_degraded_event.py  model_routing_policy.py
src/omnibase_compat/telemetry/: __init__.py  model_post_mortem_report.py  model_sweep_result.py  (+1 more)
tests/: test_omn8431_overseer_removed.py  test_overseer_exports.py
tests/overseer/: test_action_enums.py  test_model_worker_contract.py
(+67 files in other folders)
